# MyMineClone

./: .gitignore  CMakeLists.txt  README.md  prueba
imgui/backends/: imgui_impl_opengl3.h  imgui_impl_sdl2.h
include/: UIShader.h  blocksRegistry.h  camera.h  chunk.h  configShader.h  glad.h  lineShader.h  screen.h  world.h
src/: UIShader.cpp  blocksRegistry.cpp  camera.cpp  camera.h  chunk.cpp  configShader.cpp  configShader.h  lineShader.cpp  main.cpp  screen.cpp  screen.h  world.cpp
src_glad/: glad.c
